# pylogger

./: .gitignore  README.md  pyproject.toml
.github/workflows/: checks.yml
pylogger/: __init__.py  logger.py
